<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delto_tcp_comm</name>
  <version>1.0.0</version>
  <description>Unified TCP communication library for all Delto grippers (DG-3F, DG-4F, DG-5F)</description>
  <maintainer email="support@tesollo.com">TESOLLO</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
